# aoc2024

./: .gitignore  README.md  aoc2024.cabal  cabal.project  doctests.hs  fourmolu.yaml
src/: Day1.hs  Day2.hs  Day3.hs  Day4.hs  Day5.hs  Day6.hs  Day7.hs
