cabal-version:      3.4
name:               aoc2024
version:            0.1.0.0
author:             Josh Miller
maintainer:         notjoshmiller@gmail.com
build-type:         Simple
extra-source-files: README.md

common common-options
  ghc-options:
    -Wall -Wcompat -Widentities -Wincomplete-uni-patterns
    -Wincomplete-record-updates -Wredundant-constraints
    -fhide-source-paths -Wpartial-fields

  build-depends:
    , attoparsec            ^>=0.14
    , base                  ^>=4.20
    , bytestring            ^>=0.12
    , containers            ^>=0.7
    , doctest               ^>=0.23.0
    , foldl                 ^>=1.4
    , hashable              ^>=1.5
    , split                 ^>=0.2.5
    , text                  ^>=2.1
    , unordered-containers  ^>=0.2
    , vector                ^>=0.13

  hs-source-dirs:   src
  default-language: GHC2024

executable day1
  import:  common-options
  main-is: Day1.hs

executable day2
  import:  common-options
  main-is: Day2.hs
